--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "embla-carousel-react": "^8.0.0-rc14",
+    "firebase-admin": "^11.11.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
