--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
 	},
 	"dependencies": {
 		"@firebase/analytics": "^0.10.0",
+		"@firebase/auth": "^1.3.0",
 		"@firebase/firestore": "^4.2.0",
 		"axios": "^1.5.1",
 		"embla-carousel-react": "^8.0.0-rc14",
+		"encoding": "^0.1.13",
 		"next": "latest",
 		"react": "latest",
 		"react-dom": "latest",
