--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@firebase/analytics": "^0.10.0",
 		"@firebase/auth": "^1.3.0",
 		"@firebase/firestore": "^4.2.0",
+		"@headlessui/react": "^1.7.17",
 		"axios": "^1.5.1",
 		"embla-carousel-react": "^8.0.0-rc14",
 		"encoding": "^0.1.13",
