fix localstorage implementation

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@firebase/firestore": "^4.2.0",
 		"@headlessui/react": "^1.7.17",
 		"axios": "^1.5.1",
+		"cors": "^2.8.5",
 		"embla-carousel-react": "^8.0.0-rc14",
 		"encoding": "^0.1.13",
 		"next": "latest",
@@ -26,6 +27,7 @@
 		"@types/node": "latest",
 		"@types/react": "latest",
 		"@types/react-dom": "latest",
+		"@typescript-eslint/eslint-plugin": "^6.7.4",
 		"autoprefixer": "latest",
 		"eslint": "latest",
 		"eslint-config-next": "latest",
