--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"cors": "^2.8.5",
 		"embla-carousel-react": "^8.0.0-rc14",
 		"encoding": "^0.1.13",
+		"firebase-admin": "^11.11.0",
+		"firebase-functions": "^4.4.1",
 		"next": "latest",
 		"react": "latest",
 		"react-dom": "latest",
